# claude-pocket

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  install.sh
backend/: peers.json.example  projects.json.example  pyproject.toml
backend/app/: api.py  archive.py  askquestion.py  auth.py  chain.py  commands.py  config.py  costs.py  deploy.py  git_ops.py  hook_installer.py  hook_state.py  loop.py  main.py  model_picker.py  models.py  pair.py  peers.py  pqueue.py  preview.py  projects.py  push.py  registry.py  runner.py  search.py  sse.py  stall_watch.py  state.py  sync.py  terminal_input.py  tmux.py  transcribe.py  transcript.py  tunnel.py  uploads.py
backend/app/adapters/: __init__.py  base.py  claude.py
backend/docs/: spike-results.md
backend/hooks/: state_hook.py
backend/tests/: conftest.py  test_adapters.py  test_api.py  test_archive.py  test_askquestion.py  test_chain.py  test_codex_adapter.py  test_codex_appserver.py  test_codex_preview.py  test_codex_registry.py  test_codex_rollout.py  test_commands.py  test_config.py  test_costs.py  test_git_ops.py  test_git_summary.py  test_hardening_fixes.py  test_hook_installer.py  test_jsonl_parser.py  test_list_sse.py  test_loop.py  test_model_picker.py  test_models_smoke.py  test_pair.py  test_panel_peers.py  test_peers.py  test_pqueue.py  test_projects.py  test_projects_write.py  test_push.py  test_rate_limit_state.py  test_registry.py  test_runner.py  test_runner_api.py  test_search.py  test_sse.py  test_stall_watch.py  test_state_classifier.py  test_state_hook.py  test_sync.py  (+4 more)
(+165 files in other folders)
