[project]
name = "claude-pocket-backend"
version = "0.1.0"
description = "Backend API bridging a phone to live Claude Code tmux sessions (chat + live state + input)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pywebpush>=2.0.0",
    "qrcode>=8.2",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
    "watchfiles>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: toca binario/rede externo (codex real) - skip por default",
]
